--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,5 +7,9 @@ node {
    {
       sh 'docker build -t my-project .'
    }
+   stage('Publihs to Nexus') 
+   {
+      sh 'docker login -u admin -p 1234 172.25.90.1:8085'
+   }
 }
 
