--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,12 +7,12 @@ node {
    {
       sh 'docker build -t my-project:1.0 .'
    }
-  // stage('Publish to Nexus') 
-  // {
-    //  sh 'docker login -u admin -p 1234 localhost:8087'
-      //sh 'docker tag my-project:1.0 localhost:8087/my-project:1.0'
-      //sh 'docker push localhost:8087/my-project:1.0'
-  //}
+   stage('Publish to Nexus') 
+   {
+      sh 'docker login -u admin -p 1234 localhost:8087'
+      sh 'docker tag my-project:1.0 localhost:8087/my-project:1.0'
+       sh 'docker push localhost:8087/my-project:1.0'
+  }
    stage('K8s') 
    {
       sh 'kubectl apply -f cicd-deployment.yml'
