--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,6 +15,7 @@ node {
   }
    stage('K8s') 
    {
+      sh 'kubectl create namespace assignment'
       sh 'kubectl apply -f cicd-deployment.yml'
        sh 'kubectl apply -f cicd-svc.yml'
       sh 'kubectl get deployment'
