--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,26 +1,12 @@
 node {
     stage('SCM')
     {
-       git branch: 'main', url: 'https://github.com/Zainul234/CI-CD_assignment1.git'
+       git branch: 'main', url: 'https://github.com/Zainul234/JDK8S.git'
     }
      stage('Build') 
    {
       sh 'docker build -t my-project:1.0 .'
    }
-   stage('Publish to Nexus') 
-   {
-      sh 'docker login -u admin -p 1234 localhost:8087'
-      sh 'docker tag my-project:1.0 localhost:8087/my-project:1.0'
-      sh 'docker push localhost:8087/my-project:1.0'
-  }
-   stage('K8s') 
-   {
-      sh 'kubectl create namespace assignment'
-      sh 'kubectl apply -f cicd-deployment.yml'
-       sh 'kubectl apply -f cicd-svc.yml'
-      sh 'kubectl get deployment'
-      sh 'kubectl get po'
-      sh 'kubectl describe po cicd'
-   }
+   
 }
 
