--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,11 @@ node {
    {
       sh 'docker build -t my-project:1.0 .'
    }
-   
+   stage('Publish to Docker') 
+   {
+     // sh 'docker login -u admin -p 1234 localhost:8087'
+      sh 'docker tag my-project:1.0 zainulsyed/my-project:1.0'
+      sh 'docker push zainulsyed/my-project:1.0'
+  }
 }
 
