--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,5 +13,14 @@ node {
       sh 'docker tag my-project:1.0 zainulsyed/my-project:1.0'
       sh 'docker push zainulsyed/my-project:1.0'
   }
+    stage('K8s') 
+   {
+      sh 'kubectl create namespace assignment'
+      sh 'kubectl apply -f cicd-deployment.yml'
+       sh 'kubectl apply -f cicd-svc.yml'
+      sh 'kubectl get deployment'
+      sh 'kubectl get po'
+      sh 'kubectl describe po cicd'
+   }
 }
 
