--- a/cicd-deployment.yml
+++ b/cicd-deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: cicd
-        image: localhost:8087/my-project:1.0
+        image: zainulsyed/my-project:1.0
         ports:
         - containerPort: 80
 
