--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ node {
      // sh 'kubectl create namespace assignment'
       sh 'kubectl apply -f cicd-deployment.yml'
        sh 'kubectl apply -f cicd-svc.yml'
-      sh 'kubectl get deployment'
+      sh 'kubectl get deployment -n assignment'
       sh 'kubectl get po'
       //sh 'kubectl describe po cicd'
    }
